# DataStructure-CMake-Template

./: CMakeLists.txt
APPS/app_example/: CMakeLists.txt  main.cpp
APPS/app_lab1/: CMakeLists.txt  main.cpp
APPS/app_lab3/: CMakeLists.txt  main.cpp
LIBS/lib_bitfield/: CMakeLists.txt  bitfield.cpp  bitfield.h
LIBS/lib_parser/: parser.cpp  parser.h
LIBS/lib_set/: CMakeLists.txt  set.cpp  set.h
LIBS/lib_stack/: customStack.cpp  customStack.h
TESTS/: test_parser.cpp  test_stack.cpp
tests/: test_example.cpp  test_matrix.cpp
